test-dashboard/main/default/objects/TestRun__c/TestRun__c.object-meta.xml
<CustomObject>
    <label>Test Run</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Test Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>