test-dashboard/main/default/objects/TestRun__c/fields/MethodsCompleted__c.field-meta.xml
<CustomField>
    <fullName>MethodsCompleted__c</fullName>
    <description>Time in ms</description>
    <label>Number of Methods</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>