test-dashboard/main/default/objects/TestRun__c/fields/TestRunId__c.field-meta.xml
<CustomField>
    <fullName>TestRunId__c</fullName>
    <externalId>true</externalId>
    <label>Test Run Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>