test-dashboard/main/default/objects/TestRun__c/fields/TestTime__c.field-meta.xml
<CustomField>
    <fullName>TestTime__c</fullName>
    <description>Time in ms</description>
    <label>TestTime</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>