test-dashboard/main/default/objects/TestRun__c/fields/TestTimeInMinutes__c.field-meta.xml
<CustomField>
    <fullName>TestTimeInMinutes__c</fullName>
    <formula>TestTime__c / 1000 / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestTimeInMinutes</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>